fixing z-index

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -99,7 +99,7 @@
     width: 98vw;
     height: 98vh;
     overflow-y: scroll;
-    z-index: 1000;
+    z-index: 998;
     background-color: rgba(0,0,0,0.2);
     position: fixed;
     top: 0;
